# mats

./: .codacy.yml  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  example.py  genindex.html  index.html  license.txt  objects.inv  pyproject.toml  readme.md  requirements.txt  search.html  searchindex.js  setup.py  test_requirements.txt
.github/workflows/: publish.yml  publishTest.yml  unit-tests.yml  unittest.yml  unittest_3.10.yml  unittest_3.7.yml  unittest_3.8.yml  unittest_3.9.yml
ate/: __init__.py  __main__.py  archiving.py  test.py  test_sequence.py
docs/: conf.py  index.rst
docs/pages/: api.rst  contribution_guidelines.rst  examples.rst  getting-started.rst  gui.rst  saving-data.rst
docs/source/: conf.py  index.rst
docs/source/images/: logo.xcf  tkmats-animation.xcf
docs/source/pages/: api.rst  classes.rst  contribution_guidelines.rst  dealing-with-hardware.rst  examples.rst  getting-started.rst  gui.rst  guided-test-development.rst  saving-data.rst  test_gui.rst
examples/: btn_start.py  data_fmt_0.txt  data_fmt_1.txt  life_test.py  production_test.py  production_test_burnin.py  triggered_start.py
mats/: __init__.py  archiving.py  test.py  test_sequence.py  tkwidgets.py  version.py
mats/gui/: tk.py
pages/: api.html  contribution_guidelines.html  dealing-with-hardware.html  examples.html  getting-started.html  gui.html  saving-data.html
test/: __init__.py  test_Test.py  test_TestSequence.py
tests/: __init__.py  test_ArchiveManager.py  test_Test.py  test_TestSequence.py  tests.py
