[project]
name = "mats"
version = "0.74.0"
description = "Manufacturing Automated Test System, a framework for building device testing quickly and consistently"
authors = ["Jason R. Jones <slightlynybbled@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coloredlogs>=15.0.0",
    "sigfig>=1.3"
]

[build-system]
requires = ["setuptools > 75.0.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "coverage",
    "coveralls",
    "Pint",
    "pytest",
    "pytest-cov",
    "pytest-xvfb",
    "ruff",
    "Sphinx", "twine"
]

