[project]
name = "mats"
version = "0.74.6"
description = "Manufacturing Automated Test System, a framework for building device testing quickly and consistently"
authors = [
    {name = "Jason R. Jones", email = "slightlynybbled@gmail.com"},
]
readme = {file = "readme.md", content-type = "text/markdown"}
requires-python = ">=3.10"
dependencies = [
    "coloredlogs>=15.0.0",
    "sigfig>=1.3"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Manufacturing",
    "Natural Language :: English",
]

[build-system]
requires = ["setuptools > 75.0.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Documentation = "https://slightlynybbled.github.io/mats/"
Repository = "https://github.com/slightlynybbled/mats"

[tool.uv]
dev-dependencies = [
    "coverage",
    "coveralls",
    "Pint",
    "pytest",
    "pytest-cov",
    "pytest-xvfb",
    "ruff",
    'setuptools',
    "Sphinx",
    "twine"
]
package = true

[tool.pytest.ini_options]
testpaths = [
    "test",
]
